--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projet_3",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/style.scss:./css/style.css --style compressed"
+    "sass": "sass --watch ./sass/style.scss:./css/style.css"
   },
   "repository": {
     "type": "git",
